--- a/css/leptonContent.css
+++ b/css/leptonContent.css
@@ -3318,7 +3318,9 @@
       menupopup menuitem:not([type="checkbox"][checked="true"], [type="radio"]),
       menupopup menu:not([type="checkbox"][checked="true"], [type="radio"]),
       menupopup menuitem:not([type="checkbox"][checked="true"], [type="radio"]) > .menu-iconic-left > .menu-iconic-icon,
-      menupopup menu:not([type="checkbox"][checked="true"], [type="radio"]) > .menu-iconic-left > .menu-iconic-icon {
+      menupopup menuitem:not([type="checkbox"][checked="true"], [type="radio"]) > .menu-icon,
+      menupopup menu:not([type="checkbox"][checked="true"], [type="radio"]) > .menu-iconic-left > .menu-iconic-icon,
+      menupopup menu:not([type="checkbox"][checked="true"], [type="radio"]) > .menu-icon {
         -moz-appearance: none !important; /* Linux: menulist */
       }
       menupopup:is(#placesContext, #placesColumnsContext, #downloadsContextMenu)
@@ -3434,6 +3436,9 @@
           --context-menu-background-padding-default: 6px;
           --context-menu-text-padding: 21px;
         }
+        .menu-icon {
+          display: unset !important;
+        }
         /* Contextmenu Checkbox Unset */
         menupopup:is(#placesContext, #placesColumnsContext, #downloadsContextMenu) menuitem[type="checkbox"] {
           margin-inline: 0 !important;
@@ -3441,13 +3446,19 @@
         menupopup:is(#placesContext, #placesColumnsContext, #downloadsContextMenu)
           menuitem[type="checkbox"]
           > .menu-iconic-left
-          > .menu-iconic-icon {
+          > .menu-iconic-icon,
+        menupopup:is(#placesContext, #placesColumnsContext, #downloadsContextMenu)
+          menuitem[type="checkbox"]
+          > .menu-icon {
           margin-inline-end: 0 !important;
         }
         menupopup:is(#placesContext, #placesColumnsContext, #downloadsContextMenu)
           menuitem[type="checkbox"]:not([checked="true"])
           > .menu-iconic-left
-          > .menu-iconic-icon {
+          > .menu-iconic-icon,
+        menupopup:is(#placesContext, #placesColumnsContext, #downloadsContextMenu)
+          menuitem[type="checkbox"]:not([checked="true"])
+          > .menu-icon {
           border: none !important;
           background-color: unset !important;
         }
@@ -7165,7 +7176,9 @@
     menupopup menuitem:not([type="checkbox"][checked="true"], [type="radio"]),
     menupopup menu:not([type="checkbox"][checked="true"], [type="radio"]),
     menupopup menuitem:not([type="checkbox"][checked="true"], [type="radio"]) > .menu-iconic-left > .menu-iconic-icon,
-    menupopup menu:not([type="checkbox"][checked="true"], [type="radio"]) > .menu-iconic-left > .menu-iconic-icon {
+    menupopup menuitem:not([type="checkbox"][checked="true"], [type="radio"]) > .menu-icon,
+    menupopup menu:not([type="checkbox"][checked="true"], [type="radio"]) > .menu-iconic-left > .menu-iconic-icon,
+    menupopup menu:not([type="checkbox"][checked="true"], [type="radio"]) > .menu-icon {
       -moz-appearance: none !important; /* Linux: menulist */
     }
     menupopup:is(#placesContext, #placesColumnsContext, #downloadsContextMenu)
@@ -7277,6 +7290,9 @@
         --context-menu-background-padding-default: 6px;
         --context-menu-text-padding: 21px;
       }
+      .menu-icon {
+        display: unset !important;
+      }
       /* Contextmenu Checkbox Unset */
       menupopup:is(#placesContext, #placesColumnsContext, #downloadsContextMenu) menuitem[type="checkbox"] {
         margin-inline: 0 !important;
@@ -7284,13 +7300,19 @@
       menupopup:is(#placesContext, #placesColumnsContext, #downloadsContextMenu)
         menuitem[type="checkbox"]
         > .menu-iconic-left
-        > .menu-iconic-icon {
+        > .menu-iconic-icon,
+      menupopup:is(#placesContext, #placesColumnsContext, #downloadsContextMenu)
+        menuitem[type="checkbox"]
+        > .menu-icon {
         margin-inline-end: 0 !important;
       }
       menupopup:is(#placesContext, #placesColumnsContext, #downloadsContextMenu)
         menuitem[type="checkbox"]:not([checked="true"])
         > .menu-iconic-left
-        > .menu-iconic-icon {
+        > .menu-iconic-icon,
+      menupopup:is(#placesContext, #placesColumnsContext, #downloadsContextMenu)
+        menuitem[type="checkbox"]:not([checked="true"])
+        > .menu-icon {
         border: none !important;
         background-color: unset !important;
       }
